--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -100,13 +100,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
     <ul class="header">
         <li>
-            <label class="username" th:utext="${user.getName()}">Username</label>
+            <label class="username" th:utext="${loggeduser.getName()}">Username</label>
         </li>
         <li>
             <label class="roles">with roles: </label>
         </li>
         <li>
-            <label class="roles" th:each="role:${user.getRoles()}" th:text="${!roleStat.last} ?
+            <label class="roles" th:each="role:${loggeduser.getRoles()}" th:text="${!roleStat.last} ?
                                 ${#strings.substringAfter(role.getRole(), 'ROLE_')}+', ' :
                                 ${#strings.substringAfter(role.getRole(), 'ROLE_')}"></label>
         </li>
@@ -118,50 +118,72 @@
         <div class="col-md-1">
             <ul class="nav nav-pills flex-column flex-grow-1 ">
                 <li class="nav-item">
-                    <a class="nav-link " href="/admin">Admin</a>
+                    <a class="nav-link active" href="#">Admin</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">User</a>
+                    <a class="nav-link" href="/user">User</a>
                 </li>
             </ul>
         </div>
         <div class="col-md-11 vh-100">
-            <h1 class="label-adminpanel">User information page</h1>
+            <h1 class="label-adminpanel">Admin panel</h1>
             <div class="navtab">
-
+                <div class="nav nav-tabs mb-3" id="nav-tab">
+                    <a class="nav-link " href="/admin">Admin</a>
+                    <a class="nav-link active" href="#">New user</a>
+                </div>
             </div>
             <div class="card-header-border">
                 <div class="card-header">
-                    <h4>About user</h4>
+                    <h4>Add new user</h4>
                 </div>
             </div>
-
-
             <div class="main-table">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Surname</th>
-                        <th scope="col">Username</th>
-                        <th scope="col">Roles</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td th:utext="${user.getId()}"></td>
-                        <td th:utext="${user.getName()}"></td>
-                        <td th:utext="${user.getSurname()}">-</td>
-                        <td th:utext="${user.getUsername()}">-</td>
-                        <td><label th:each="role:${user.getRoles()}" th:text="${!roleStat.last} ?
-                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}+', ' :
-                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}">-
-                        </label></td>
+                <form class="form-container" th:method="POST" th:action="@{/}" th:object="${user}">
+                    <div class="form-group w-25 p-auto m-auto">
+                        <label for="firstName">Имя</label>
+                        <input type="text" class="form-control" id="firstName"
+                               placeholder="имя" name="name">
+                    </div>
 
-                    </tr>
-                    </tbody>
-                </table>
+                    <div class="form-group w-25 p-auto m-auto">
+                        <label for="lastName" class="pt-md-2">Фамилия</label>
+                        <input type="text" class="form-control" id="lastName"
+                               placeholder="фамилия" name="surname">
+                    </div>
+
+                    <div class="form-group w-25 p-auto m-auto">
+                        <label for="age" class="pt-md-2">Возраст</label>
+                        <input type="number" class="form-control" id="age"
+                               placeholder="возраст" name="age">
+                    </div>
+
+                    <div class="form-group w-25 p-auto m-auto">
+                        <label for="email" class="pt-md-2">Электронная почта</label>
+                        <input type="text" class="form-control" id="email"
+                               placeholder="Электронная почта" name="username">
+                    </div>
+
+                    <div class="form-group w-25 p-auto m-auto">
+                        <label for="password" class="pt-md-2">Пароль</label>
+                        <input type="password" class="form-control" id="password"
+                               placeholder="Пароль" name="password" required>
+                    </div>
+
+                    <div class="form-group w-25 p-auto m-auto">
+                        <label for="roles" class="pt-md-2">Выберите роль</label>
+                        <select class="custom-select form-control" size="2" id="roles" multiple
+                                th:name="roles1" required>
+                            <option th:each="role:${roles}" th:value="${role.getRole()}"
+                                    th:text="${#strings.substringAfter(role.getRole().toLowerCase(),
+                                                         'role_')}"></option>
+                        </select>
+                    </div>
+                    <div align="center">
+                        <button class="btn btn-success mt-2" type="submit">Add new user</button>
+                    </div>
+                </form>
+
             </div>
         </div>
     </div>
