--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,168 +1,265 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
+
     <title>Users</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
-        body {
-            color: #404E67;
-            background: #F5F7FA;
-            font-family: 'Open Sans', sans-serif;
-        }
-
-        .table-wrapper {
-            width: 700px;
-            margin: 30px auto;
-            background: #fff;
-            padding: 20px;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-        }
-
-        .table-title {
-            padding-bottom: 10px;
-            margin: 0 0 10px;
-        }
-
-        .table-title h2 {
-            margin: 6px 0 0;
-            font-size: 22px;
-        }
-
-        .table-title .add-new {
-            float: right;
-            height: 30px;
+        .username {
+            color: #ffffff;
             font-weight: bold;
-            font-size: 12px;
-            text-shadow: none;
-            min-width: 100px;
-            border-radius: 50px;
-            line-height: 13px;
+            margin-bottom: 0px;
+            text-transform: lowercase;
         }
 
-        .table-title .add-new i {
-            margin-right: 4px;
+        .roles {
+            color: #ffffff;
         }
 
-        table.table {
-            table-layout: fixed;
+        .header {
+            display: flex;
+            align-items: center;
+            list-style-type: none;
+            padding-left: 0px;
+            margin-bottom: 0px;
+            padding-bottom: 0px
         }
 
-        table.table tr th, table.table tr td {
-            border-color: #e9e9e9;
+        .header li label {
+            margin-bottom: 0px;
         }
 
-        table.table th i {
-            font-size: 13px;
-            margin: 0 5px;
-            cursor: pointer;
+        .header li {
+            margin-right: 3px;
         }
 
-        table.table th:last-child {
-            width: 100px;
+
+        .table-striped {
+            padding: 20px;
         }
 
-        table.table td a {
-            cursor: pointer;
-            display: inline-block;
-            margin: 0 5px;
-            min-width: 24px;
+        .logout {
+            margin-left: auto;
+            color: #c5c5c5;
         }
 
-        table.table td a.add {
-            color: #27C46B;
+        #nav-tab {
+            margin-bottom: 0rem !important;
+            align-items: center;
         }
 
-        table.table td a.edit {
-            color: #FFC107;
+        .main-table {
+            padding: 20px;
+            border: solid #d5d5d5 1px;
+            background-color: #ffffff;
         }
 
-        table.table td a.delete {
-            color: #E34724;
+        .card-header {
+            border-bottom: solid #d5d5d5 1px;
+            border-top: solid #d5d5d5 1px;
+            background-color: #efefef;
         }
 
-        table.table td i {
-            font-size: 19px;
+        .card-header-border {
+            border-left: solid #d5d5d5 1px;
+            border-right: solid #d5d5d5 1px;
         }
 
-        table.table td a.add i {
-            font-size: 24px;
-            margin-right: -1px;
-            position: relative;
-            top: 3px;
+        #nav-home-tab {
+            margin-right: 20px;
+            border-bottom: solid #d5d5d5 1px;
         }
 
-        table.table .form-control {
-            height: 32px;
-            line-height: 32px;
-            box-shadow: none;
-            border-radius: 2px;
+        .col-md-11 {
+            background-color: #f6f7f9;
+
         }
 
-        table.table .form-control.error {
-            border-color: #f50000;
+        .col-md-1 {
+            display: flex;
+            padding-left: 0px;
+            padding-right: 0px;
         }
 
-        table.table td .add {
-            display: none;
+        #main {
+            height: 100%;
         }
     </style>
 
 </head>
-
 <body>
-<div class="container">
-    <div class="table-wrapper">
-        <div class="table-title">
-            <div class="row">
-                <div class="col-sm-8"><h2>UserList</h2></div>
-                <div class="col-sm-4">
-                    <form action="/newUser" target="_blank">
-                        <button>Add new User</button>
-                    </form>
+<!-- пакет jQuery и Bootstrap (включает Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+    <ul class="header">
+        <li>
+            <label class="username" th:utext="${loggeduser.getName()}">Username</label>
+        </li>
+        <li>
+            <label class="roles">with roles: </label>
+        </li>
+        <li>
+            <label class="roles" th:each="role:${loggeduser.getRoles()}" th:text="${!roleStat.last} ?
+                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}+', ' :
+                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}"></label>
+        </li>
+    </ul>
+    <a class="logout" href="/logout">Logout</a>
+</nav>
+<div class="container-fluid">
+    <div class="row id=" main>
+        <div class="col-md-1">
+            <ul class="nav nav-pills flex-column flex-grow-1 ">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/user">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-11 vh-100">
+            <h1 class="label-adminpanel">Admin panel</h1>
+            <div class="navtab">
+                <div class="nav nav-tabs mb-3" id="nav-tab">
+                    <a class="nav-link active" href="#">Admin</a>
+                    <a class="nav-link" href="/newuser">Add new user</a>
                 </div>
             </div>
+            <div class="card-header-border">
+                <div class="card-header">
+                    <h4>All Users</h4>
+                </div>
+            </div>
+
+
+            <div class="main-table">
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Surname</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Roles</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="User: ${users}">
+                        <td th:utext="${User.getId()}"></td>
+                        <td th:utext="${User.getName()}"></td>
+                        <td th:utext="${User.getSurname()}">-</td>
+                        <td th:utext="${User.getUsername()}">-</td>
+                        <td><label th:each="role:${User.getRoles()}" th:text="${!roleStat.last} ?
+                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}+', ' :
+                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}">-
+                        </label>
+                        </td>
+                        <td>
+                            <button class="btn btn-info active" data-toggle="modal"
+                                    th:data-target="${'#editModal' + User.getId()}">Edit
+                            </button>
+                        </td>
+                        <td>
+                            <form th:method="DELETE" th:action="@{/{id}(id=${User.getId()})}">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                        </td>
+
+
+                        <!-- Modal -->
+                        <div class="modal fade" th:id="${'editModal' + User.getId()}" tabindex="-1" role="dialog"
+                             aria-labelledby="editModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="editModalLabel">Изменение пользователя</h5>
+                                        <button type="submit" class="close" aria-label="Close" data-dismiss="modal">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form class="form-container" th:method="PATCH"
+                                          th:action="@{/admin}" th:object="${User}">
+                                        <div class="modal-body text-center">
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editId" class="col-form-label">#</label>
+                                                <input type="number" class="form-control" id="editId" name="id"
+                                                       th:value="*{id}" readonly>
+                                            </div>
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editFirstName" class="col-form-label pt-md-2">Имя</label>
+                                                <input type="text" class="form-control" id="editFirstName" name="name"
+                                                       th:value="*{name}"></input>
+                                            </div>
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editSurName" class="col-form-label pt-md-2">Фамилия</label>
+                                                <input type="text" class="form-control" id="editSurName" name="surname"
+                                                       th:value="*{surname}"></input>
+                                            </div>
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editAge" class="col-form-label pt-md-2">Возраст</label>
+                                                <input type="number" class="form-control" id="editAge" name="age"
+                                                       th:value="*{age}">
+                                            </div>
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editEmail" class="col-form-label pt-md-2">Электронная
+                                                    почта</label>
+                                                <input type="text" class="form-control" id="editEmail" name="username"
+                                                       th:value="*{username}"></input>
+                                            </div>
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editPassword" class="col-form-label pt-md-2">Пароль</label>
+                                                <input type="password" class="form-control" id="editPassword"
+                                                       name="password"
+                                                       th:value="*{password}" required></input>
+                                            </div>
+                                            <div class="form-group m-auto col-md-6">
+                                                <label for="editRoles" class="pt-md-2">Выберите роль</label>
+                                                <select class="custom-select form-control" size="2"
+                                                        id="editRoles" multiple th:name="roles1" required>
+                                                    <option th:each="role:${roles}"
+                                                            th:value="${role.getRole()}"
+                                                            th:text="${#strings.substringAfter
+                                                                            (role.getRole().toLowerCase(), 'role_')}"
+                                                            th:selected="${User.getRoles().contains(role)}">
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-secondary"
+                                                    data-dismiss="modal">Закрыть
+                                            </button>
+                                            <button type="submit" class="btn btn-primary active"
+                                                    aria-pressed="true">Изменить
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <table class="table table-bordered">
-            <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Surname</th>
-            </tr>
-            </thead>
-            <tbody>
-
-            <tr th:each="User: ${users}" >
-                <td th:utext="${User.getId()}"></td>
-                <td th:utext="${User.getName()}"></td>
-                <td th:utext="${User.getSurname()}"></td>
-                <td>
-                    <form th:action="@{/{id}/edit(id=${User.getId() })}">
-                        <button>Edit</button>
-                    </form>
-
-                </td>
-                <td>
-                    <form th:method="DELETE" th:action="@{/{id}(id=${User.getId()})}">
-                        <button>Удалить</button>
-                    </form>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <form th:method="POST" th:action="@{/logout}">
-
-            <input type="submit" value="Logout"/>
-        </form>
     </div>
-
 </div>
 </body>
 </html>
