--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec=“http://www.thymeleaf.org/extras/spring-security”>
+
 <html lang="ru">
 <head>
     <!-- Required meta tags -->
@@ -117,9 +119,7 @@
     <div class="row id=" main>
         <div class="col-md-1">
             <ul class="nav nav-pills flex-column flex-grow-1 ">
-                <li class="nav-item">
-                    <a class="nav-link " href="/admin">Admin</a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link active" href="#">User</a>
                 </li>
