--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,171 +1,22 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec=“http://www.thymeleaf.org/extras/spring-security”>
-
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>Userinfo</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Панель администратора</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-
-
-    <title>Users</title>
-    <style>
-        .username {
-            color: #ffffff;
-            font-weight: bold;
-            margin-bottom: 0px;
-            text-transform: lowercase;
-        }
-
-        .roles {
-            color: #ffffff;
-        }
-
-        .header {
-            display: flex;
-            align-items: center;
-            list-style-type: none;
-            padding-left: 0px;
-            margin-bottom: 0px;
-            padding-bottom: 0px
-        }
-
-        .header li label {
-            margin-bottom: 0px;
-        }
-
-        .header li {
-            margin-right: 3px;
-        }
-
-
-        .table-striped {
-            padding: 20px;
-        }
-
-        .logout {
-            margin-left: auto;
-            color: #c5c5c5;
-        }
-
-        #nav-tab {
-            margin-bottom: 0rem !important;
-            align-items: center;
-        }
-
-        .main-table {
-            padding: 20px;
-            border: solid #d5d5d5 1px;
-            background-color: #ffffff;
-        }
-
-        .card-header {
-            border-bottom: solid #d5d5d5 1px;
-            border-top: solid #d5d5d5 1px;
-            background-color: #efefef;
-        }
-
-        .card-header-border {
-            border-left: solid #d5d5d5 1px;
-            border-right: solid #d5d5d5 1px;
-        }
-
-        #nav-home-tab {
-            margin-right: 20px;
-            border-bottom: solid #d5d5d5 1px;
-        }
-
-        .col-md-11 {
-            background-color: #f6f7f9;
-
-        }
-
-        .col-md-1 {
-            display: flex;
-            padding-left: 0px;
-            padding-right: 0px;
-        }
-
-        #main {
-            height: 100%;
-        }
-    </style>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
-    <ul class="header">
-        <li>
-            <label class="username" th:utext="${user.getName()}">Username</label>
-        </li>
-        <li>
-            <label class="roles">with roles: </label>
-        </li>
-        <li>
-            <label class="roles" th:each="role:${user.getRoles()}" th:text="${!roleStat.last} ?
-                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}+', ' :
-                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}"></label>
-        </li>
-    </ul>
-    <a class="logout" href="/logout">Logout</a>
-</nav>
-<div class="container-fluid">
-    <div class="row id=" main>
-        <div class="col-md-1">
-            <ul class="nav nav-pills flex-column flex-grow-1 ">
-
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">User</a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-11 vh-100">
-            <h1 class="label-adminpanel">User information page</h1>
-            <div class="navtab">
-
-            </div>
-            <div class="card-header-border">
-                <div class="card-header">
-                    <h4>About user</h4>
-                </div>
-            </div>
+<!-- Вариант 2: Bootstrap JS отдельно от Popper -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
 
-            <div class="main-table">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Surname</th>
-                        <th scope="col">Username</th>
-                        <th scope="col">Roles</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td th:utext="${user.getId()}"></td>
-                        <td th:utext="${user.getName()}"></td>
-                        <td th:utext="${user.getSurname()}">-</td>
-                        <td th:utext="${user.getUsername()}">-</td>
-                        <td><label th:each="role:${user.getRoles()}" th:text="${!roleStat.last} ?
-                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}+', ' :
-                                ${#strings.substringAfter(role.getRole(), 'ROLE_')}">-
-                        </label></td>
-
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 </body>
