--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -129,12 +129,13 @@
                 </li>
             </ul>
         </div>
+
         <div class="col-md-11 vh-100">
             <div class="tab-pane fade show active" id="admin">
-                <h1 class="label-adminpanel">Admin panel</h1>
+                <h4 class="label-adminpanel">Admin panel</h4>
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#alluser"
+                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#allusers"
                                 type="button" role="tab" aria-controls="home" aria-selected="true">All user
                         </button>
                     </li>
@@ -146,7 +147,7 @@
 
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="alluser" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="tab-pane fade show active" id="allusers" role="tabpanel" aria-labelledby="home-tab">
                         <div class="row">
                             <div class="col">
                                 <div class="card">
@@ -200,8 +201,8 @@
                                             </div>
 
                                             <div class="form-group w-25 p-auto m-auto">
-                                                <label for="email" class="pt-md-2">Электронная почта</label>
-                                                <input type="text" class="form-control" id="email"
+                                                <label for="username" class="pt-md-2">Username</label>
+                                                <input type="text" class="form-control" id="username"
                                                        placeholder="Электронная почта" name="username">
                                             </div>
 
@@ -261,8 +262,8 @@
                                     <input type="number" class="form-control" id="editAge" name="age">
                                 </div>
                                 <div class="form-group m-auto col-md-6">
-                                    <label for="editEmail" class="col-form-label pt-md-2">Электронная почта</label>
-                                    <input type="text" class="form-control" id="editEmail" name="username">
+                                    <label for="editUsername" class="col-form-label pt-md-2">Username</label>
+                                    <input type="text" class="form-control" id="editUsername" name="username">
                                 </div>
                                 <div class="form-group m-auto col-md-6">
                                     <label for="editPassword" class="col-form-label pt-md-2">Пароль</label>
@@ -320,9 +321,9 @@
                                            readonly>
                                 </div>
                                 <div class="form-group m-auto col-md-6">
-                                    <label for="deleteEmail" class="col-form-label pt-md-2">Электронная
+                                    <label for="deleteUsername" class="col-form-label pt-md-2">Электронная
                                         почта</label>
-                                    <input type="text" class="form-control" id="deleteEmail" name="username"
+                                    <input type="text" class="form-control" id="deleteUsername" name="username"
                                            readonly>
                                 </div>
                                 <div class="form-group m-auto col-md-6">
