--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,23 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Userinfo</title>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Панель администратора</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
+
+    <title>Users</title>
+    <style>
+        .username {
+            color: #ffffff;
+            font-weight: bold;
+            margin-bottom: 0px;
+            text-transform: lowercase;
+        }
+
+        .roles {
+            color: #ffffff;
+        }
+
+        .header {
+            display: flex;
+            align-items: center;
+            list-style-type: none;
+            padding-left: 0px;
+            margin-bottom: 0px;
+            padding-bottom: 0px
+        }
+
+        .header li label {
+            margin-bottom: 0px;
+        }
+
+        .header li {
+            margin-right: 3px;
+        }
+
+
+        .table-striped {
+            padding: 20px;
+        }
+
+        .logout {
+            margin-left: auto;
+            color: #c5c5c5;
+        }
+
+        #nav-tab {
+            margin-bottom: 0rem !important;
+            align-items: center;
+        }
+
+        #alluserstab {
+            padding: 0px;
+            border: solid #d5d5d5 0px;
+            background-color: #ffffff;
+        }
+
+
+        #nav-home-tab {
+            margin-right: 20px;
+            border-bottom: solid #d5d5d5 1px;
+        }
+
+        .col-md-11 {
+            background-color: #f6f7f9;
+
+        }
+
+        .col-md-1 {
+            display: flex;
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+
+        #main {
+            height: 100%;
+        }
+
+        .table thead th {
+            vertical-align: bottom;
+            border-bottom: 0px solid #dee2e6;
+        }
+
+        .table thead th {
+            vertical-align: bottom;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        .table td, .table th {
+            padding: 0.75rem;
+            vertical-align: top;
+            border-top: 0px;
+        }
+
+        .nav-tabs {
+            border-bottom: 0px solid #dee2e6;
+        }
+    </style>
+
 </head>
 <body>
 <!-- Вариант 2: Bootstrap JS отдельно от Popper -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+    <span class="navbar-text">
+        <a id="head"></a>
+    </span>
+    <a class="logout" href="/logout">Logout</a>
+</nav>
+<div class="container-fluid">
+    <div class="row id=" main>
+        <div class="col-md-1">
+            <ul class="nav nav-pills flex-column flex-grow-1 ">
+                <div>
+                    <li class="nav-item">
+                        <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" href="/admin">Admin</a>
+                    </li>
+                </div>
+                <li class="nav-item">
 
+                    <a class="nav-link  active" href="/user">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-11 vh-100">
+            <div class="tab-pane fade show active" id="admin">
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="alluser" role="tabpanel" aria-labelledby="home-tab">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-header"><h4>Userinfo</h4></div>
 
-
-
-</body>
-</html>
+                                    <table class="table table-striped table-hover" id="alluserstab">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">id</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Surname</th>
+                                            <th scope="col">Username</th>
+                                            <th scope="col">Age</th>
+                                            <th scope="col">Roles</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <script src="userInfo.js"></script>
