--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -163,5 +163,11 @@
                             </div>
                         </div>
                     </div>
-                    <script src="userInfo.js"></script>
-
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="userinfo.js"></script>
+</div>
+</body>
+</html>
